# imsearch

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  rustfmt.toml
.sqlx/: query-06efa71436b93d84e8cd278aef672757f9fef5adb0437bc5649325cab20c8771.json  query-06fee7e56fb7034f811376f3cdc5ef5a256f87cc2df3aaa30da72767f15adde7.json  query-16cba87bc386f6e81b790748f3d60de3e0d352b89c4bce14c19a81be080208fc.json  query-20232644744b56949b6daed3e985300bafa89b8adcaa8690b3beea0dc2b68457.json  query-2e46a370d8e2468ecb69e41698126a4f7150273a9826cd2014860cfdcd68dc5f.json  query-30bd4478da5cafddab78e2607c0a54510dbeddeabb10c7ef38a9316a445d957f.json  query-34156e23aabf2542c7a31525a0454f0476944eee4d4bab97018271cead9718d8.json  query-35b522fde751cd4899c6c5556abb17b4f42ea2839d73344fa03c1343a589db75.json  query-369cedd7cdf488b20c956747f112fe263320797b52440e27cc6a6f225105000f.json  query-3b59bbe8d683988cdd6c34fcb3cdd853cf2fb4e795bb674ca3b8a00e3ee25efa.json  query-401508cc078e1ddb7bd34e3bc9cfa740d34b52801a844ab71a9f23c8d34a89c1.json  query-44a3743b33ca8ff4d7ed1f355e7bd456188570678699120bd8e7c3037ef48390.json  query-541c32606cdcfb4b01e453256d14f444ba27db239728e554f10ee0ea5d696e35.json  query-5fba4552384da69d63148255e3cbb55072af08898e9f8bd685598cccf946a32f.json  query-6179de9361671670895a96e0a442f115ee28eaa7f4c59efec7f2289e9c17bc85.json  query-6448c902ecb0931499dbe678271b5f9627f8187533e1baba540d8e42c3c3b4ac.json  query-6a8135ca39639e473c73175d78ced4d77574e11c8a8a0971de9ac37a6bd90f0b.json  query-7bcd27bd712a831796e6bc9d3814e23cf61189ce37b8e821917fa167ddbd9914.json  query-a39b035a6a6fa6aed5f39c1c2de407b4b450408a53a359e90dd2ea889b2425a4.json  query-a4da28fd7054b239d3feb90b27c8c89b62de283c71ca6d4e22719c7a19fd0fc4.json  query-a8b3845bd053d896ba49486bd7de13b2f97b567185868fcd59562e39170e804f.json  query-b0d5415f23e821cd8d1fbcfee4b5492180998483b2a5c2e9376781a57febcae3.json  query-bfcc4c4310bdb87cad783e8cad83627b10180386b7aac8090192c9732dc31723.json  query-d5b68acb50040fc9d352c5f2967918cadcafa357c81664b41339e55fd5c866d2.json  query-d610fca26d929d1fbde895142166d5293575c0134f6efe9842c665b95d4e70d5.json  query-ec53d9770260cf607ec65c2fe5168a84daef3a3f0226dac98005487554105957.json  query-ee6891d1dc420ab83211e51e6a6667aa08c6e37278f581da90cb2433091904f2.json
benches/: hamming.rs  image.rs  kmeans.rs  kmodes.rs
examples/: phash_analyze.rs
migrations/: 001_init.sql  002_create_index_indexed.sql
orb-slam3-sys/: .gitattributes  .gitignore  Cargo.toml  build.rs
orb-slam3-sys/orb-slam3/: ORBextractor.cc  ORBextractor.h  ORBwrapper.cc  ocvrs_common.hpp
orb-slam3-sys/src/: lib.rs
src/: config.rs  dhash.rs  error.rs  flann.rs  hamming.rs  hnsw.rs  image_db.rs  imdb.rs  index.rs  kmeans.rs  kmodes.rs  knn.rs  lib.rs  main.rs  matrix.rs  metrics.rs  orb.rs  searcher.rs  slam2_orb.rs  slam3_orb.rs  utils.rs
src/FLANN/: FLANNwrapper.cc
src/FLANN/flann/: flann.cpp
src/ORB_SLAM2/: ORBwrapper.cc
src/ORB_SLAM3/: ORBextractor.cc  ORBextractor.h  ORBwrapper.cc  ocvrs_common.hpp
src/cli/: add.rs  build.rs  clean.rs  export.rs  match.rs  mod.rs  search.rs  server.rs  show.rs  train.rs  update_db.rs
src/cli/add/: mod.rs  tasks.rs  types.rs
src/cmd/: image.rs  index.rs  mod.rs  rocks.rs  server.rs  show.rs
src/db/: crud.rs  database.rs  mod.rs  model.rs  update.rs  utils.rs
src/faiss/: IndexBinaryIVF_c.cpp  IndexBinaryIVF_c.h  IndexBinary_c.cpp  IndexBinary_c.h  Index_c.h  faiss_c.h  faiss_wrapper.cc  index.rs  index_factory_c.cpp  index_factory_c.h  index_io_c.h  invlists.rs  macros_impl.h  mod.rs  types.rs
src/invlists/: array_invlists.rs  lmdb_invlists.rs  mod.rs
src/ivf/: mod.rs  quantizer.rs  utils.rs
src/ivf/invlists/: array_invlists.rs  lmdb_invlists.rs  mod.rs  ondisk_invlists.rs  vstack_invlists.rs
src/ivf/quantizer/: faiss.rs  hnsw.rs  mod.rs  usearch.rs
src/rocks/: database.rs  mod.rs  utils.rs
src/server/: api.rs  error.rs  mod.rs  state.rs  types.rs
tests/: cli.rs  ivf_invlists.rs
utils/: convert_quantizer.py  train.py  train_cpu.py
