[package]
name = "imsearch"
version = "3.0.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
astral-tokio-tar = "0.5.2"
axum = { version = "0.8.4", features = ["multipart", "macros"] }
axum-auth = { version = "0.8.1", default-features = false, features = [
    "auth-bearer",
] }
axum_typed_multipart = { version = "0.16.2", default-features = false }
bincode = "1.3.3"
blake3 = "1.8.2"
bytemuck = "1.23.0"
byteorder = "1.5.0"
clap = { version = "4.5.38", features = ["derive"] }
crossbeam-channel = "0.5.15"
directories = "6.0.0"
either = "1.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
heed = "0.22.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
kmeans = "2.0.0"
log = "0.4.27"
num_cpus = "1.16.0"
prometheus = { version = "0.14.0", features = ["process", "push"] }
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
smallvec = "1.15.0"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio"] }
tikv-jemallocator = "0.6.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.5.2", features = ["limit"] }
usearch = { version = "2.17.7", features = ["openmp"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
# zip yank 掉了 2.6.x 版本，但是 utoipa-swagger-ui 9.0.1 最低依赖 2.6.x
utoipa-swagger-ui = { version = "=9.0.0", features = ["axum"] }
walkdir = "2.5.0"

[dependencies.orb-slam3-sys]
version = "0.1.0"
path = "orb-slam3-sys"

[dependencies.opencv]
version = "=0.94.4"
default-features = false
features = [
    "clang-runtime",
    "features2d",
    "flann",
    "imgcodecs",
    "imgproc",
    "img_hash",
]

[features]
default = []

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
criterion = "0.5.1"
predicates = "3.1.3"
rand = "0.9.1"
rstest = "0.25.0"
tempfile = "3.12.0"

[[bench]]
name = "image"
harness = false

[[bench]]
name = "hamming"
harness = false

[[bench]]
name = "kmeans"
harness = false
