[package]
name = "imsearch"
version = "3.0.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
astral-tokio-tar = "0.5.2"
axum = { version = "0.8.4", features = ["multipart", "macros"] }
axum-auth = { version = "0.8.1", default-features = false, features = [
    "auth-bearer",
] }
axum_typed_multipart = { version = "0.16.3", default-features = false }
binrw = "0.15.0"
blake3 = "1.8.2"
bytemuck = "1.23.2"
byteorder = "1.5.0"
clap = { version = "4.5.43", features = ["derive"] }
crossbeam-channel = "0.5.15"
directories = "6.0.0"
either = "1.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
hnsw_rs = "0.3.2"
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
log = "0.4.27"
memmap2 = "0.9.7"
ndarray = "0.16.1"
num_cpus = "1.17.0"
prometheus = { version = "0.14.0", features = ["process", "push"] }
rand = "0.9.2"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tikv-jemallocator = "0.6.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.5.2", features = ["limit"] }
usearch = { version = "2.19.1", features = ["openmp"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
# zip yank 掉了 2.6.x 版本，但是 utoipa-swagger-ui 9.0.1 最低依赖 2.6.x
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
walkdir = "2.5.0"
zstd = "0.13.3"

[dependencies.orb-slam3-sys]
version = "0.1.0"
path = "orb-slam3-sys"

[dependencies.opencv]
version = "=0.94.4"
default-features = false
features = [
    "clang-runtime",
    "features2d",
    "flann",
    "imgcodecs",
    "imgproc",
    "img_hash",
]

[dependencies.faiss-sys]
version = "0.6.3-alpha.0"
git = "https://github.com/Aloxaf/faiss-rs"
branch = "imsearch"
features = ["static", "avx2"]

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
criterion = "0.5.1"
predicates = "3.1.3"
rand = "0.9.2"
rstest = "0.25.0"
tempfile = "3.20.0"

[[bench]]
name = "image"
harness = false

[[bench]]
name = "hamming"
harness = false

[[bench]]
name = "kmodes"
harness = false
