[package]
name = "imsearch"
version = "3.0.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
astral-tokio-tar = "0.6.4"
axum = { version = "0.8.9", features = ["multipart", "macros"] }
axum-auth = { version = "0.8.1", default-features = false, features = [
    "auth-bearer",
] }
axum_typed_multipart = { version = "0.16.6", default-features = false }
binrw = "0.15.1"
blake3 = "1.8.5"
bytemuck = "1.25.1"
byteorder = "1.5.0"
clap = { version = "4.6.2", features = ["derive"] }
crossbeam-channel = "0.5.16"
directories = "6.0.0"
either = "1.16.0"
env_logger = "0.11.11"
futures = "0.3.33"
hnsw_rs = "0.3.4"
indicatif = { version = "0.18.6", features = ["rayon"] }
itertools = "0.15.0"
log = "0.4.33"
memmap2 = "0.9.11"
ndarray = "0.17.2"
num_cpus = "1.17.0"
prometheus = { version = "0.14.0", features = ["process", "push"] }
rand = "0.10.2"
rayon = "1.12.0"
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
snmalloc-rs = "0.7.4"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.7.0", features = ["limit"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
walkdir = "2.5.0"
zstd = "0.13.3"

[dependencies.orb-slam3-sys]
version = "0.1.0"
path = "orb-slam3-sys"

[dependencies.opencv]
version = "=0.99.0"
default-features = false
features = [
    "clang-runtime",
    "features",
    "features2d",
    "flann",
    "imgcodecs",
    "imgproc",
]

[dependencies.faiss-sys]
version = "0.6.3-alpha.0"
git = "https://github.com/Aloxaf/faiss-rs"
branch = "imsearch"
features = ["static"]

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.4"
criterion = "0.8.2"
predicates = "3.1.4"
rand = "0.10.2"
rstest = "0.26.1"
tempfile = "3.27.0"
usearch = { version = "2.26.0", features = ["openmp"] }

[[bench]]
name = "image"
harness = false

[[bench]]
name = "hamming"
harness = false

[[bench]]
name = "kmodes"
harness = false

[build-dependencies]
vergen-gitcl = { version = "10.0.1", features = ["build"] }
