[package]
name = "orb-slam3-sys"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.opencv]
# 更新时记得修改 build.rs 里的版本号
version = "=0.94.4"
default-features = false
features = ["features2d", "imgproc"]

[build-dependencies]
cc = "1.2.19"
dunce = "1.0.5"
glob = "0.3.2"
pkg-config = "0.3.32"
semver = "1.0.26"
shlex = "1.3.0"
vcpkg = "0.2.15"
